--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,15 @@
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit sqlalchemy; echo '✅ Packages installed and Requirements met'",
+  "updateContentCommand": "
+    echo 'Iniciando instalação de pacotes...';
+    [ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt;
+    echo 'Instalando requisitos do Python...';
+    [ -f requirements.txt ] && pip3 install --user -r requirements.txt || echo 'Arquivo requirements.txt não encontrado';
+    echo 'Instalando Streamlit e SQLAlchemy...';
+    pip3 install --user streamlit sqlalchemy;
+    echo '✅ Pacotes instalados e Requisitos atendidos'
+  ",
   "postAttachCommand": {
     "server": "streamlit run app.py --server.enableCORS false --server.enableXsrfProtection false"
   },
